<resources>
    <string translatable="true" name="action_settings">Settings</string>
    <string translatable="true" name="action_start">Start</string>
    <string translatable="true" name="action_stop">Stop</string>
    <string translatable="true" name="action_restart">ReStart</string>
    <string translatable="true" name="action_options">Options</string>
    <string translatable="true" name="action_help">Help</string>
    <string translatable="true" name="action_about">About</string>
    <string translatable="true" name="action_continue">Continue</string>
    <string translatable="true" name="action_load">Load game</string>
    <string translatable="true" name="action_save">Save game</string>
    <string translatable="true" name="action_screenshot">ScreenShot</string>
    <string translatable="true" name="action_exit">Exit</string>
    <string translatable="true" name="action_carddeck">Cardset</string>
    <string translatable="true" name="action_default_cards">default card set</string>
    <string translatable="true" name="action_english_cards">english card deck</string>
    <string translatable="true" name="action_german_cards">german card deck</string>
    <string translatable="true" name="action_french_cards">french card deck</string>
    <string translatable="true" name="action_ukraine_cards">ukraine card deck</string>
    <string translatable="true" name="action_polish_cards">polish card deck</string>
    <string translatable="true" name="action_us_cards">US future card set</string>
    <string translatable="true" name="bStart_text">Start</string>
    <string translatable="true" name="bStop_text">Stop</string>
    <string translatable="true" name="bHelp_text">Help</string>
    <string translatable="true" name="bContinue_text">Continue</string>
    <string translatable="true" name="b20a_text">Say marriage 20</string>
    <string translatable="true" name="b20b_text">Say atou marriage 40</string>
    <string translatable="true" name="bChange_text">Change Atou</string>
    <string translatable="true" name="tMes_text">Short information</string>
    <string translatable="true" name="tPoints_text">0</string>
    <string translatable="true" name="sPoints">points</string>
    <string translatable="true" name="tRest_text">10</string>
    <string translatable="true" name="sRest">Rest</string>
    <string translatable="true" name="imOut0_text">Playout card</string>
    <string translatable="true" name="imOut1_text">Answer card</string>
    <string translatable="true" name="imgCOut0_text">Computer card 0</string>
    <string translatable="true" name="imgCOut1_text">Computer card 1</string>
    <string translatable="true" name="imgCOut2_text">Computer card 2</string>
    <string translatable="true" name="imgCOut3_text">Computer card 3</string>
    <string translatable="true" name="imgCOut4_text">Computer card 4</string>
    <string translatable="true" name="imgStitchC0a_text">computers 1st stitch 1st card</string>
    <string translatable="true" name="imgStitchC0b_text">computers 1st stitch 2nd card</string>
    <string translatable="true" name="imgStitch0a_text">1st stitch 1st card</string>
    <string translatable="true" name="imgStitch0b_text">1st stitch 2nd card</string>
    <string translatable="true" name="imgStitch1a_text">2nd stitch 1st card</string>
    <string translatable="true" name="imgStitch1b_text">2nd stitch 2nd card</string>
    <string translatable="true" name="imgStitch2a_text">3rd stitch 1st card</string>
    <string translatable="true" name="imgStitch2b_text">3rd stitch 2nd card</string>
    <string translatable="true" name="imgStitch3a_text">4th stitch 1st card</string>
    <string translatable="true" name="imgStitch3b_text">4th stitch 2nd card</string>
    <string translatable="true" name="imAtou_text">Atou card</string>
    <string translatable="true" name="imTalon_text">Talon card</string>
    <string translatable="true" name="imMerge_text">Merging animation</string>
    <string translatable="true" name="im0_text">Player card 1</string>
    <string translatable="true" name="im1_text">Player card 2</string>
    <string translatable="true" name="im2_text">Player card 3</string>
    <string translatable="true" name="im3_text">Player card 4</string>
    <string translatable="true" name="im4_text">Player card 5</string>
    <string translatable="true" name="cardval_2">Jack</string>
    <string translatable="true" name="cardval_3">Queen</string>
    <string translatable="true" name="cardval_4">King</string>
    <string translatable="true" name="cardval_9">Nine</string>
    <string translatable="true" name="cardval_10">Ten</string>
    <string translatable="true" name="cardval_11">Ace</string>
    <string translatable="true" name="colorDelimiter"> of </string>
    <string translatable="true" name="color_h">hearts</string>
    <string translatable="true" name="color_k">diamonds</string>
    <string translatable="true" name="color_p">spades</string>
    <string translatable="true" name="color_t">clubs</string>
    <string translatable="true" name="color_e">empty card</string>
    <string translatable="true" name="color_n">nocolor</string>
    <string translatable="true" name="newgame_starts">Start a new game &#8230;</string>
    <string translatable="true" name="nogame_started">No game has been started!</string>
    <string translatable="true" name="close_game">closes game</string>
    <string translatable="true" name="player_closed_game">Player closes game!</string>
    <string translatable="true" name="computer_closed_game">Computer closes game !</string>
    <string translatable="true" name="say_pair">say pair</string>
    <string translatable="true" name="no_second_pair">no second pair</string>
    <string translatable="true" name="toplayout_clickon_card">Click on card symbol to play out that card.</string>
    <string translatable="true" name="twenty_in_color">Twenty in</string>
    <string translatable="true" name="fourty_in_color">Forty in</string>
    <string translatable="true" name="twenty_and_enough">Twenty and enough !</string>
    <string translatable="true" name="fourty_and_enough">Forty and enough !</string>
    <string translatable="true" name="you_have_won_points">You win with %1$s points!</string>
    <string translatable="true" name="computer_has_won_points">Computer won with %1$s points!</string>
    <string translatable="true" name="your_hit_points">Your hit with %1$s points.</string>
    <string translatable="true" name="computer_hit_points">Computer hits with %1$s points.</string>
    <string translatable="true" name="click_continue">Click on Continue!</string>
    <string translatable="true" name="computer_closing_failed">Computer failed closing the game, you win !</string>
    <string translatable="true" name="closing_failed">You failed to close this game, computer wins !</string>
    <string translatable="true" name="color_hit_force_mode">No more cards in talon -> follow the suit led otherwise must trump (if possible) !</string>
    <string translatable="true" name="last_hit_you_have_won">Last trick: you win!</string>
    <string translatable="true" name="computer_wins_last_hit">Last trick: computer wins!</string>
    <string translatable="true" name="you_say_pair">Thou announce a marriages in color %1$s!</string>
    <string translatable="true" name="computer_changes_atou">computer changes Atou card.</string>
    <string translatable="true" name="computer_says_pair">computer announces  a marriages in color %1$s!</string>
    <string translatable="true" name="this_is_no_valid_card">This is no valid card to play!</string>
    <string translatable="true" name="you_must_play_pair_card">You must play out queen or king when marriages!</string>
    <string translatable="true" name="you_must_play_color_hit_force_rules">Follow the suit led stict rules!</string>
    <string translatable="true" name="creating_players">Creating new players &#8230;</string>
    <string translatable="true" name="merging_cards">Merging cards &#8230;</string>
    <string translatable="true" name="atou_is">Atou is %1$s!</string>
    <string translatable="true" name="best_card_would_be">Best card would be: %1$s</string>
    <string translatable="true" name="ending_game">Ending game!</string>
    <string translatable="true" name="landscape_mode">Screen switched to Landscape mode</string>
    <string translatable="true" name="portrait_mode">Screen switched to Portrait mode</string>
    <string translatable="true" name="help_text">SchnapsDroid v3.24.0102 - Card game Schnapsen as an android app by Heinrich Elsigan (root@darkstar.work) \n\nThe game is designed to play against the computer. If it is the turn, you can play a card by clicking on the card symbol and dragging the card image. \nTo change atou, drag the atou Jack card to the atou card above. \nTo announce a marriage, drag king or queen to the other card of the pair. \n"exchange atou" or "announce a marriage" can also be played, by clicking on the specific button; \nIf the computer is on the turn, it plays a card and you can drag one of your own cards to answer. \nTo close the current game, you have to click on atou card. \n\nRules correspond to the Austrian Schnapsen [ https://en.wikipedia.org/wiki/Sixty-six_(card_game ].</string>
    <string translatable="true" name="build_with">Built with Android Studio Flamingo 2022.2.1</string>
    <string translatable="true" name="learn_more">Learn more</string>
    <string translatable="true" name="back_button">Back</string>
    <string translatable="true" name="you_won_tournement">Computer is marked with a fat point.</string>
    <string translatable="true" name="you_won_taylor">Computer is marked as a taylor.</string>
    <string translatable="true" name="computer_won_tournement">You were marked with a fat point.</string>
    <string translatable="true" name="computer_won_taylor">You were marked as a taylor.</string>
    <string translatable="false" name="meta_action_settings">id_action_settings</string>
    <string translatable="false" name="meta_action_start">id_action_start</string>
    <string translatable="false" name="meta_action_stop">id_action_stop</string>
    <string translatable="false" name="meta_action_restart">id_action_restart</string>
    <string translatable="false" name="meta_action_options">id_action_options</string>
    <string translatable="false" name="meta_action_help">id_action_help</string>
    <string translatable="false" name="meta_action_about">id_action_about</string>
    <string translatable="false" name="meta_action_continue">id_action_continue</string>
    <string translatable="false" name="meta_action_load">id_action_load</string>
    <string translatable="false" name="meta_action_save">id_action_save</string>
    <string translatable="false" name="action_sound">Sound (On/Off)</string>
    <string translatable="false" name="meta_action_sound">id_action_sound</string>
    <string translatable="false" name="meta_action_screenshot">id_action_screenshot</string>
    <string translatable="false" name="meta_action_exit">id_action_exit</string>
    <string translatable="false" name="meta_action_carddeck">id_action_carddeck</string>
    <string translatable="false" name="meta_action_default_cards">id_action_default_cards</string>
    <string translatable="false" name="meta_action_english_cards">id_action_english_cards</string>
    <string translatable="false" name="meta_action_german_cards">id_action_german_cards</string>
    <string translatable="false" name="meta_action_french_cards">id_action_french_cards</string>
    <string translatable="false" name="meta_action_ukraine_cards">id_action_ukraine_cards</string>
    <string translatable="false" name="meta_action_polish_cards">id_action_polish_cards</string>
    <string translatable="false" name="meta_action_us_cards">id_action_us_cards</string>
    <string translatable="false" name="tDbg_text" formated="false"> </string>
</resources>