<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="-12dp"
            android:minWidth="270dp"
            android:minHeight="96dp">

            <LinearLayout
                android:id="@+id/linLayoutCard0"
                android:layout_width="72dp"
                android:layout_height="96dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp">
                <ImageView
                    android:id="@+id/imgCCut0"
                    android:contentDescription="@string/imgCOut0_text"
                    android:src="@drawable/e"
                    android:layout_width="72dp"
                    android:layout_height="96dp"
                    android:minHeight="96dp"
                    android:minWidth="72dp"
                    android:visibility="visible"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/linLayoutCard1"
                android:layout_width="72dp"
                android:layout_height="96dp"
                android:layout_marginStart="60dp"
                android:layout_marginTop="0dp">
                <ImageView
                    android:id="@+id/imgCCut1"
                    android:layout_width="72dp"
                    android:layout_height="96dp"
                    android:contentDescription="@string/imgCOut1_text"
                    android:minWidth="72dp"
                    android:minHeight="96dp"
                    android:src="@drawable/e" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/linLayoutCard2"
                android:layout_width="72dp"
                android:layout_height="96dp"
                android:layout_marginStart="120dp"
                android:layout_marginTop="0dp">
                <ImageView
                    android:id="@+id/imgCCut2"
                    android:layout_width="72dp"
                    android:layout_height="96dp"
                    android:contentDescription="@string/imgCOut2_text"
                    android:minHeight="96dp"
                    android:minWidth="72dp"
                    android:src="@drawable/e" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/linLayoutCard3"
                android:layout_width="72dp"
                android:layout_height="96dp"
                android:layout_marginStart="180dp"
                android:layout_marginTop="0dp"
                android:visibility="visible">

                <ImageView
                    android:id="@+id/imgCCut3"
                    android:layout_width="match_parent"
                    android:layout_height="96dp"
                    android:contentDescription="@string/imgCOut2_text"
                    android:minWidth="72dp"
                    android:minHeight="96dp"
                    android:src="@drawable/e" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/linLayoutCard4"
                android:layout_width="72dp"
                android:layout_height="96dp"
                android:layout_marginStart="240dp"
                android:layout_marginTop="0dp"
                android:visibility="invisible">
                <ImageView
                    android:id="@+id/imgCCut4"
                    android:layout_width="72dp"
                    android:layout_height="96dp"
                    android:contentDescription="@string/imgCOut2_text"
                    android:minHeight="96dp"
                    android:minWidth="72dp"
                    android:src="@drawable/e"
                    android:visibility="visible" />
            </LinearLayout>

            <Button
                android:id="@+id/bContinue"
                android:layout_width="120dp"
                android:layout_height="32dp"
                android:layout_marginStart="298dp"
                android:layout_marginTop="16dp"
                android:enabled="true"
                android:minWidth="108dp"
                android:minHeight="32dp"
                android:text="@string/bContinue_text"
                android:background="@color/colorPrimaryDark"
                android:textColor="@color/colorBackLight"
                android:textStyle="bold"
                android:textSize="12sp" />

            <Button
                android:id="@+id/bChange"
                android:layout_width="120dp"
                android:layout_height="32dp"
                android:layout_marginStart="298dp"
                android:layout_marginTop="54dp"
                android:enabled="false"
                android:minWidth="108dp"
                android:minHeight="32dp"
                android:text="@string/bChange_text"
                android:background="@color/colorPrimaryDark"
                android:textColor="@color/colorBackLight"
                android:textStyle="italic"
                android:textSize="12sp" />




        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="86dp"
            android:minWidth="300dp"
            android:minHeight="96dp">

            <LinearLayout
                android:id="@+id/playedCard1"
                android:layout_width="72dp"
                android:layout_height="96dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp">
                <ImageView
                    android:id="@+id/imOut1"
                    android:layout_width="72dp"
                    android:layout_height="96dp"
                    android:contentDescription="@string/imOut1_text"
                    android:minWidth="72dp"
                    android:minHeight="96dp"
                    android:src="@drawable/e" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/playedCard0"
                android:layout_width="72dp"
                android:layout_height="96dp"
                android:layout_marginStart="72dp"
                android:layout_marginTop="0dp">
                <ImageView
                    android:id="@+id/imOut0"
                    android:layout_width="72dp"
                    android:layout_height="96dp"
                    android:contentDescription="@string/imOut0_text"
                    android:minWidth="72dp"
                    android:minHeight="96dp"
                    android:src="@drawable/e" />
            </LinearLayout>

            <ImageView
                android:id="@+id/imMerge"
                android:layout_width="144dp"
                android:layout_height="96dp"
                android:layout_marginStart="144dp"
                android:layout_marginTop="0dp"
                android:contentDescription="@string/imMerge_text"
                android:minWidth="144dp"
                android:minHeight="96dp"
                android:src="@drawable/anim_merge"
                android:visibility="visible" />

            <LinearLayout
                android:id="@+id/atouCard"
                android:layout_width="72dp"
                android:layout_height="96dp"
                android:layout_marginStart="216dp"
                android:layout_marginTop="0dp">

                <ImageView
                    android:id="@+id/imAtou"
                    android:layout_width="72dp"
                    android:layout_height="96dp"
                    android:contentDescription="@string/imAtou_text"
                    android:minWidth="72dp"
                    android:minHeight="96dp"
                    android:src="@drawable/n0"
                    android:visibility="invisible" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/talonCard"
                android:layout_width="96dp"
                android:layout_height="72dp"
                android:layout_marginStart="148dp"
                android:layout_marginTop="12dp">

                <ImageView
                    android:id="@+id/imTalon"
                    android:layout_width="96dp"
                    android:layout_height="72dp"
                    android:contentDescription="@string/imTalon_text"
                    android:minWidth="96dp"
                    android:minHeight="72dp"
                    android:src="@drawable/t"
                    android:visibility="invisible" />
            </LinearLayout>

            <TextView
                android:id="@+id/tRest"
                android:layout_width="48dp"
                android:layout_height="32dp"
                android:layout_marginStart="296dp"
                android:layout_marginTop="0dp"
                android:minWidth="48dp"
                android:minHeight="36dp"
                android:text="@string/tRest_text"
                android:textAlignment="center"
                android:background="@color/colorPrimaryDark"
                android:textColor="@color/colorBackLight"
                android:textStyle="bold"
                android:textSize="16sp"
                android:tooltipText="@string/sRest" />

            <TextView
                android:id="@+id/tPoints"
                android:layout_width="48dp"
                android:layout_height="32dp"
                android:layout_marginStart="344dp"
                android:layout_marginTop="0dp"
                android:minHeight="36dp"
                android:minWidth="48dp"
                android:textAlignment="center"
                android:textSize="14sp"
                android:textStyle="bold"
                android:tooltipText="@string/sPoints"
                android:background="@color/colorPrimaryDark"
                android:textColor="@color/colorBackLight"
                android:text="@string/tPoints_text" />

            <Button
                android:id="@+id/b20a"
                android:layout_width="120dp"
                android:layout_height="30dp"
                android:layout_marginStart="296dp"
                android:layout_marginTop="35dp"
                android:enabled="false"
                android:minWidth="108dp"
                android:minHeight="32dp"
                android:text="@string/b20a_text"
                android:background="@color/colorPrimaryDark"
                android:textColor="@color/colorBackLight"
                android:textStyle="italic"
                android:textSize="10sp" />

            <Button
                android:id="@+id/b20b"
                android:layout_width="120dp"
                android:layout_height="30dp"
                android:layout_marginStart="296dp"
                android:layout_marginTop="66dp"
                android:enabled="false"
                android:minWidth="108dp"
                android:minHeight="32dp"
                android:text="@string/b20b_text"
                android:background="@color/colorPrimaryDark"
                android:textColor="@color/colorBackLight"
                android:textStyle="italic"
                android:textSize="10sp" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginTop="184dp"
            android:minWidth="380dp"
            android:minHeight="96dp">

            <LinearLayout
                android:id="@+id/playerCard0"
                android:layout_width="72dp"
                android:layout_height="96dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp">
                <ImageView
                    android:id="@+id/im0"
                    android:layout_width="72dp"
                    android:layout_height="96dp"
                    android:contentDescription="@string/im0_text"
                    android:minWidth="72dp"
                    android:minHeight="96dp"
                    android:src="@drawable/n0" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/playerCard1"
                android:layout_width="72dp"
                android:layout_height="96dp"
                android:layout_marginStart="68dp"
                android:layout_marginTop="0dp">
                <ImageView
                    android:id="@+id/im1"
                    android:layout_width="72dp"
                    android:layout_height="96dp"
                    android:contentDescription="@string/im1_text"
                    android:minWidth="72dp"
                    android:minHeight="96dp"
                    android:src="@drawable/n0" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/playerCard2"
                android:layout_width="72dp"
                android:layout_height="96dp"
                android:layout_marginStart="136dp"
                android:layout_marginTop="0dp">
                <ImageView
                    android:id="@+id/im2"
                    android:layout_width="72dp"
                    android:layout_height="96dp"
                    android:contentDescription="@string/im2_text"
                    android:minWidth="72dp"
                    android:minHeight="96dp"
                    android:src="@drawable/n0" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/playerCard3"
                android:layout_width="72dp"
                android:layout_height="96dp"
                android:layout_marginStart="204dp"
                android:layout_marginTop="0dp">
                <ImageView
                    android:id="@+id/im3"
                    android:layout_width="72dp"
                    android:layout_height="96dp"
                    android:contentDescription="@string/im3_text"
                    android:minWidth="72dp"
                    android:minHeight="96dp"
                    android:src="@drawable/n0" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/playerCard4"
                android:layout_width="72dp"
                android:layout_height="96dp"
                android:layout_marginStart="272dp"
                android:layout_marginTop="0dp">
                <ImageView
                    android:id="@+id/im4"
                    android:layout_width="72dp"
                    android:layout_height="96dp"
                    android:contentDescription="@string/im4_text"
                    android:minWidth="72dp"
                    android:minHeight="96dp"
                    android:src="@drawable/n0" />
            </LinearLayout>

        </RelativeLayout>

        <TextView
            android:id="@+id/tMes"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginTop="284dp"
            android:minWidth="320dp"
            android:minHeight="32dp"
            android:text="@string/tMes_text"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/colorBackLight"
            android:textStyle="bold"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/tDbg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="0dp"
            android:layout_marginTop="324dp"
            android:minWidth="340dp"
            android:minHeight="192dp"
            android:textSize="12sp"
            android:textStyle="italic"
            android:text="@string/tDbg_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>